<refactor> [полноценный] - CustomCellFactory.java - добавлено применение стилей через CSS- классы, а не свойства - Добавлен интерфейс DAO - Выгрузка сцены теперь происходит из fxml-файла - Все хендлеры перенесены в класс MainController.java - Добавлена кастомная панель PaneTable для использования в fxml - Класс Patient.java- изменен тип данных birthDate со String на LocalDate - удален jdbc-драйвер. его зависимость перенесена в pom-xml вместо подклюючения напрямую через Class.forName в DAO - класс QueryWizard.java собирает строку запроса для отправки в бд вместо выборок напрямую из ObservableList<>, к которому привязывается таблица - TableViewPatient.java - при инициализации делается запрос в базу данных и выгружается вся таблица - удалено все лишнее из класса TestApp.java